--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,37 @@ h1 {
   margin: 0;
   font-size: 2rem;
 }
+
+ul {
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  width: 100%;
+  text-align: center;
+  padding: .4rem 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+a:visited {
+  color: #fff;
+}
+
+a:hover {
+  color: #fff;
+  background-color: #a63f38;
+}
+
+li:hover {
+  background-color: #a63f38;
+}
